# memorize_the_c

./: .gitignore  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
data/corrections/: corrections.json  corrections.schema.json
data/expected/: structure_expectations.json
data/output/: learning_units.json  learning_units.min.json
data/reference/: amendments.seed.json  (+3 more)
docs/: FUTURE.md  learning-layer-report.md
scripts/: build_amendment_corpus.py
tests/: test_amendment_corpus.py  test_article_31c_correction.py  test_article_parser.py  test_article_text.py  test_articles_1_2_corrections.py  test_articles_365_plus_corrections.py  test_articles_44_45_corrections.py  test_articles_7_19_incomplete.py  test_browse_artefact_corrections.py  test_card_readiness.py  test_clause_parser.py  test_constitution_parser.py  test_corpus_artefact_scrub.py  test_corpus_text_pass_art3_124.py  test_docling_integration.py  test_footnote_parser.py  test_home_skip_overview.py  test_learning_unit_generator.py  test_missing_clause_one.py  test_notification_schedule.py  test_recall_align.py  test_regression_phase2.py  test_reminder_digest.py  test_reminder_engine.py  test_restore_articles_43a_43b_48a.py  test_send_reminders_cli.py  test_text_cleaner.py  test_validator.py  test_web_app.py  test_web_sprint10.py  test_web_sprint11.py  test_web_sprint12.py  test_web_sprint13.py  test_web_sprint14.py  test_web_sprint15.py  test_web_sprint16.py  test_web_sprint17.py  test_web_sprint18.py  test_web_sprint19.py  test_web_sprint20.py  (+9 more)
(+120 files in other folders)
